--- a/Tesis/Views/ChatPage.xaml
+++ b/Tesis/Views/ChatPage.xaml
@@ -53,7 +53,7 @@
                             </Frame>
 
                             <!-- Fecha del mensaje -->
-                            <Label Text="{Binding Timestamp, StringFormat='{0:HH:mm}'}"
+                            <Label 
                                    FontSize="12"
                                    TextColor="Gray"
                                    HorizontalOptions="{Binding Role, Converter={StaticResource MessageAlignment}}"/>
@@ -76,7 +76,7 @@
                    Text="{Binding UserMessage, Mode=TwoWay}"
                    BackgroundColor="White"
                    ClearButtonVisibility="WhileEditing"/>
-
+    
             <!-- Botón de enviar -->
             <Button Grid.Column="1"
                     Text="Enviar"
